--- a/config
+++ b/config
@@ -1,8 +1,9 @@
 browser "newsboat-open"
-
 bind-key j down
 bind-key k up
 bind-key j next articlelist
 bind-key k prev articlelist
 bind-key l open
 bind-key h quit
+bind-key G end
+bind-key g home
