--- a/config
+++ b/config
@@ -1,4 +1,3 @@
-browser "newsboat-open"
 bind-key j down
 bind-key k up
 bind-key j next articlelist
@@ -7,3 +6,6 @@ bind-key l open
 bind-key h quit
 bind-key G end
 bind-key g home
+
+browser "newsboat-open"
+macro b set browser "$BROWSER %u &" ; open-in-browser ; set browser "newsboat-open"
