Script to get video duration in newsboat

--- a/config
+++ b/config
@@ -9,3 +9,4 @@ browser "newsboat-video"
 macro b set browser "$BROWSER %u &" ; open-in-browser ; set browser "newsboat-video"
 macro t set browser "newsboat-thumb" ; open-in-browser ; set browser "newsboat-video"
 macro a set browser "newsboat-audio" ; open-in-browser ; set browser "newsboat-video"
+macro l set browser "newsboat-duration" ; open-in-browser ; set browser "newsboat-video"
