--- a/config
+++ b/config
@@ -7,6 +7,5 @@ bind-key g home
 
 browser "openfeed"
 macro b set browser "openfeed -b %u &" ; open-in-browser ; set browser "openfeed"
-macro t set browser "openfeed -t %u &" ; open-in-browser ; set browser "openfeed"
 macro a set browser "openfeed -a %u &" ; open-in-browser ; set browser "openfeed"
-macro l set browser "openfeed -l %u &" ; open-in-browser ; set browser "openfeed"
+macro p set browser "openfeed -lt %u &" ; open-in-browser ; set browser "openfeed"
