--- a/config
+++ b/config
@@ -4,8 +4,11 @@ bind-key l open
 bind-key h quit
 bind-key G end
 bind-key g home
+unbind-key ,
+bind-key SPACE macro-prefix
 
 browser "openfeed"
 macro a set browser "openfeed -a %u &" ; open-in-browser ; set browser "openfeed"
 macro p set browser "openfeed -lt %u &" ; open-in-browser ; set browser "openfeed"
 macro b set browser "openfeed -b %u &" ; open-in-browser ; set browser "openfeed"
+macro v set browser "openfeed -v %u &" ; open-in-browser ; set browser "openfeed"
