--- a/config
+++ b/config
@@ -8,8 +8,9 @@ unbind-key ,
 bind-key SPACE macro-prefix
 
 browser "openfeed"
-macro a set browser "openfeed -a %u &" ; open-in-browser ; set browser "openfeed"
-macro p set browser "openfeed -lt %u &" ; open-in-browser ; set browser "openfeed"
-macro b set browser "openfeed -b %u &" ; open-in-browser ; set browser "openfeed"
-macro v set browser "openfeed -v %u &" ; open-in-browser ; set browser "openfeed"
-macro q set browser "openfeed -q %u &" ; open-in-browser ; set browser "openfeed"
+macro a set browser "openfeed -a %u" ; open-in-browser ; set browser "openfeed"
+macro p set browser "openfeed -lt %u" ; open-in-browser ; set browser "openfeed"
+macro b set browser "openfeed -b %u" ; open-in-browser ; set browser "openfeed"
+macro v set browser "openfeed -v %u" ; open-in-browser ; set browser "openfeed"
+macro q set browser "openfeed -q %u" ; open-in-browser ; set browser "openfeed"
+macro d set browser "openfeed -d %u" ; open-in-browser ; set browser "openfeed"
