--- a/config
+++ b/config
@@ -6,6 +6,7 @@ bind-key G end
 bind-key g home
 unbind-key ,
 bind-key SPACE macro-prefix
+bind-key I open-all-unread-in-browser
 
 browser "openfeed"
 macro a set browser "openfeed -a %u" ; open-in-browser ; set browser "openfeed"
