--- a/newsboat/.config/newsboat/config
+++ b/newsboat/.config/newsboat/config
@@ -8,13 +8,13 @@ unbind-key ,
 bind-key SPACE macro-prefix
 bind-key I open-all-unread-in-browser
 
-browser "openfeed"
-macro a set browser "openfeed -a %u" ; open-in-browser ; set browser "openfeed"
-macro p set browser "openfeed -lt %u" ; open-in-browser ; set browser "openfeed"
-macro b set browser "openfeed -b %u" ; open-in-browser ; set browser "openfeed"
-macro v set browser "openfeed -v %u" ; open-in-browser ; set browser "openfeed"
-macro q set browser "openfeed -q %u" ; open-in-browser ; set browser "openfeed"
-macro d set browser "openfeed -d %u" ; open-in-browser ; set browser "openfeed"
+browser "openfeed-default"
+macro a set browser "openfeed-audio" ; open-in-browser ; set browser "openfeed-default"
+macro p set browser "openfeed-preview" ; open-in-browser ; set browser "openfeed-default"
+macro b set browser "openfeed-browser" ; open-in-browser ; set browser "openfeed-default"
+macro v set browser "openfeed-video" ; open-in-browser ; set browser "openfeed-default"
+macro q set browser "openfeed-qr" ; open-in-browser ; set browser "openfeed-default"
+macro d set browser "openfeed-download" ; open-in-browser ; set browser "openfeed-default"
 
 reload-threads 2
 highlight feedlist "-----(.*)-----" red default bold
