--- a/newsboat/.config/newsboat/config
+++ b/newsboat/.config/newsboat/config
@@ -7,6 +7,7 @@ bind-key g home
 unbind-key ,
 bind-key SPACE macro-prefix
 bind-key I open-all-unread-in-browser
+bind-key H toggle-show-read-feeds
 
 browser "openfeed-default"
 macro a set browser "openfeed-audio" ; open-in-browser ; set browser "openfeed-default"
