--- a/youtube-dl/.config/youtube-dl/config
+++ b/youtube-dl/.config/youtube-dl/config
@@ -1,2 +1,5 @@
+--ignore-errors
+--add-metadata
+
 --external-downloader aria2c
---external-downloader-args='-x 10 -j 10'
+--external-downloader-args='-x 16 -j 16 -s 16'
