Added vimwiki plugin
Added the dev branch of the vimwiki plugin

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,7 @@
 [submodule "nvim/.config/nvim/pack/plugins/start/vim-ledger"]
 	path = nvim/.config/nvim/pack/plugins/start/vim-ledger
 	url = git@github.com:ledger/vim-ledger.git
+[submodule "nvim/.config/nvim/pack/plugins/start/vimwiki"]
+	path = nvim/.config/nvim/pack/plugins/start/vimwiki
+	url = https://github.com/vimwiki/vimwiki.git
+	branch = dev
