Changed vim-ledger url
Changed url for vim-ledger submodule to use HTTPS instead of SSH

--- a/.gitmodules
+++ b/.gitmodules
@@ -12,7 +12,7 @@
 	url = https://github.com/junegunn/fzf
 [submodule "nvim/.config/nvim/pack/plugins/start/vim-ledger"]
 	path = nvim/.config/nvim/pack/plugins/start/vim-ledger
-	url = git@github.com:ledger/vim-ledger.git
+	url = https://github.com/ledger/vim-ledger.git
 [submodule "nvim/.config/nvim/pack/plugins/start/vimwiki"]
 	path = nvim/.config/nvim/pack/plugins/start/vimwiki
 	url = https://github.com/vimwiki/vimwiki.git
