--- a/youtube-dl/.config/youtube-dl/config
+++ b/youtube-dl/.config/youtube-dl/config
@@ -1,5 +1,5 @@
---ignore-errors
+#--ignore-errors
 --add-metadata
+--write-thumbnail
 
---external-downloader aria2c
---external-downloader-args='-x 16 -j 16 -s 16'
+#--format '(bestvideo+bestaudio/best)[protocol^=http]'
