Updated aria2 configs

--- a/aria2/.config/aria2/aria2.conf
+++ b/aria2/.config/aria2/aria2.conf
@@ -1,5 +1,8 @@
 continue
 bt-seed-unverified=true
 auto-file-renaming=false
-max-connection-per-server=2
+max-connection-per-server=16
+max-concurrent-downloads=100
 force-sequential
+split=16
+min-split-size=5M
