Added Systemd timer for refreshing Newsboat

--- a/newsboat/.config/newsboat/config
+++ b/newsboat/.config/newsboat/config
@@ -10,6 +10,7 @@ bind-key I open-all-unread-in-browser
 bind-key H toggle-show-read-feeds
 bind-key c sort
 bind-key C rev-sort
+unbind-key R
 
 browser "openfeed-default"
 macro a set browser "openfeed-audio" ; open-in-browser ; set browser "openfeed-default"
