--- a/mpv/.config/mpv/input.conf
+++ b/mpv/.config/mpv/input.conf
@@ -1,13 +1,15 @@
 UP add volume +5
 DOWN add volume -5
+MOUSE_BTN3 add volume +5
+MOUSE_BTN4 add volume -5
 ENTER cycle pause
 N playlist-next
 P playlist-prev
 s ignore
 l ignore
 S screenshot
-MOUSE_BTN3 ignore
-MOUSE_BTN4 ignore
 RIGHT seek 5 exact
 LEFT seek -5 exact
 Ctrl+w ignore
+d ignore
+ctrl+r cycle_values video-rotate "90" "180" "270" "0"
