--- a/newsboat/.config/newsboat/config
+++ b/newsboat/.config/newsboat/config
@@ -1,12 +1,10 @@
 cleanup-on-quit no
 #reload-threads 2
-highlight feedlist "-----(.*)-----" red default bold
-
-browser "openfeed"
-macro b set browser "openfeed -b" ; open-in-browser ; set browser "openfeed"
-macro q set browser "openfeed -q" ; open-in-browser ; set browser "openfeed"
+feed-sort-order lastupdated-asc
+show-read-feeds no
 confirm-mark-feed-read false
 
+highlight feedlist "-----(.*)-----" red default bold
 
 bind-key j down
 bind-key k up
@@ -21,3 +19,9 @@ bind-key H toggle-show-read-feeds
 bind-key c sort
 bind-key C rev-sort
 unbind-key R
+unbind-key O
+
+browser "openfeed"
+macro b set browser "openfeed -b" ; open-in-browser ; set browser "openfeed"
+macro q set browser "openfeed -q" ; open-in-browser ; set browser "openfeed"
+macro w set browser "openfeed -w" ; open-in-browser ; set browser "openfeed"
